tests/NormalTests/paczka1/small_fuzzy/90807994.err
Error in line 6: A162 S882 -2,7
Error in line 8: nJlpkWgAL SRR2 40,3
Error in line 9: xj39 A162 36,1
